--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,17 @@
-<div class="container">
-  <h1>Welcome to Tauri + Angular!</h1>
-  <div class="row">
-    <a href="https://tauri.app" target="_blank">
-      <img src="/assets/tauri.svg" class="logo tauri" alt="Tauri logo" />
-    </a>
-    <a href="https://angular.io" target="_blank">
-      <img src="/assets/angular.svg" class="logo angular" alt="Angular logo" />
-    </a>
-  </div>
-  <p>Click on the logos to learn more about the frameworks</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <h2>Lançamentos Financeiros</h2>
+    <span class="example-fill-remaining-space"></span>
+    <nav>
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <a routerLink="/" mat-menu-item>Lançamentos</a>
+        <a routerLink="/expense-add" mat-menu-item>Novo lançamento</a>
+      </mat-menu>
+    </nav>
+  </mat-toolbar-row>
+</mat-toolbar>
 
-  <form class="row" (submit)="greet($event, greetInput.value)">
-    <input #greetInput id="greet-input" placeholder="Enter a name..." />
-    <button type="submit">Greet</button>
-  </form>
-  <p>{{ greetingMessage }}</p>
-</div>
+<router-outlet />
