--- a/src/app/filter/filter.component.scss
+++ b/src/app/filter/filter.component.scss
@@ -1,22 +1,27 @@
 #budget-filter > mat-card {
-    padding: 20px;
+    padding: 0.5em;
     margin-bottom: 15px;
     background-color: #f9f8f8;
 }
 
 #budget-filter-card {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 0px;
+    max-width: 1200px;
+    margin: 0 auto;
+    gap:1rem;
 }
 
-.budget-filter-interval { grid-area: 1 / 1 / 2 / 2; }
-.budget-filter-type { grid-area: 1 / 2 / 2 / 3; }
-.budget-filter-category { grid-area: 1 / 3 / 2 / 4; }
-.budget-filter-account { grid-area: 1 / 4 / 2 / 5; }
-.budget-filter-button { grid-area: 1 / 5 / 2 / 6; }
+@media (min-width: 520px) {
+    #budget-filter-card { 
+        grid-template-columns: repeat(2, 1fr); 
+    }
+}
+
+@media (min-width: 1300px) {
+    #budget-filter-card { 
+        grid-template-columns: repeat(5, 1fr); 
+    }
+}
 
 .filter-title {
     font-weight: bold;
